Service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    name: myapp
  ports:
    - protocol: TCP
      # Port accessible inside cluster
      port: 5000
      # Port to forward to inside the pod
      targetPort: 5000
      # Port accessible outside cluster
      nodePort: 30002
  type: NodePort
